--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
   <link
+    href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet"
+  />
+  <link
     rel="apple-touch-icon"
     sizes="72x72"
     href="img/apple-touch-icon-72x72.png"
